<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment"
    android:background="@drawable/temp">

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/difficulty"
        app:layout_constraintEnd_toStartOf="@id/name"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toEndOf="@id/lives"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/lives"
        app:layout_constraintEnd_toStartOf="@id/difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@id/score"
        app:layout_constraintStart_toEndOf="@id/difficulty"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lives_value"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="@dimen/text_margin_top"
        android:digits="3"
        app:layout_constraintEnd_toEndOf="@id/lives"
        app:layout_constraintStart_toStartOf="@id/lives"
        app:layout_constraintTop_toBottomOf="@id/lives" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:text="@string/name_value"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/score_value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/score"
        app:layout_constraintTop_toBottomOf="@id/score" />

    <TextView
        android:id="@+id/difficulty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        app:layout_constraintEnd_toEndOf="@id/difficulty"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="@id/difficulty"
        app:layout_constraintTop_toBottomOf="@id/difficulty" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Your Character is:"
        app:layout_constraintEnd_toStartOf="@+id/score_value"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/lives_value"
        app:layout_constraintTop_toBottomOf="@+id/name_value" />

    <ImageView
        android:id="@+id/userCharacter"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_marginTop="552dp"
        android:elevation="100dp"
        android:src="@android:drawable/screen_background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/up_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:src="@drawable/up_arrow"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807"
        android:alpha="0.3"/>

    <ImageView
        android:id="@+id/bottom_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:src="@drawable/bottom_arrow"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:alpha="0.3"/>

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:src="@drawable/right_arrow"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        android:alpha="0.3"/>

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:src="@drawable/left_arrow"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        android:alpha="0.3"/>


</androidx.constraintlayout.widget.ConstraintLayout>